--- a/src/main/webapp/resources/css/authorization.css
+++ b/src/main/webapp/resources/css/authorization.css
@@ -3,6 +3,8 @@ body {
     color: #6a6f8c;
     background: #c8c8c8;
     font: 600 16px/18px 'Open Sans', sans-serif;
+    background: url('../image/background.jpg') no-repeat center fixed;
+    background-size: 100%;
 }
 
 *, :after, :before {
@@ -28,17 +30,18 @@ a {
     width: 100%;
     margin: auto;
     max-width: 525px;
-    min-height: 670px;
+    min-height: 900px;
     position: relative;
     box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
 }
 
 .login-html {
     width: 100%;
-    height: 100%;
+    height: 43%;
     position: absolute;
     padding: 90px 70px 50px 70px;
-    background: rgba(40, 57, 101, .9);
+    background: rgba(32, 124, 52, .5);
+    border-radius: 2%;
 }
 
 .login-html .sign-in-htm,
@@ -77,7 +80,7 @@ a {
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab {
     color: #fff;
-    border-color: #1161ee;
+    border-color: #28A745;
 }
 
 .login-form {
@@ -118,7 +121,7 @@ a {
 }
 
 .login-form .group .button {
-    background: #1161ee;
+    background: #28A745;
 }
 
 .login-form .group label .icon {
@@ -158,7 +161,7 @@ a {
 }
 
 .login-form .group .check:checked + label .icon {
-    background: #1161ee;
+    background: #28A745;
 }
 
 .login-form .group .check:checked + label .icon:before {
