--- a/src/main/webapp/resources/css/footer.css
+++ b/src/main/webapp/resources/css/footer.css
@@ -1,6 +1,9 @@
 footer {
     background-color: #16181b;
     color: #9A9DA0;
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    /*width: 100%;*/
 }
 
 .icon {
