--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -2,6 +2,12 @@
     cursor: pointer;
 }
 
+header {
+    position: fixed;
+    width: 100%;
+    z-index: 10000;
+}
+
 /*#space {*/
 /*    visibility: hidden;*/
 /*}*/
