--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -1,6 +1,57 @@
+body {
+    overflow-x: hidden;
+}
+
 #table {
     background: #595C5F;
 }
+
+#schedule table {
+    border-collapse: unset;
+    border-spacing: 0 5px;
+}
+
+#schedule {
+    margin-left: 5%;
+    margin-right: 30%;
+}
+
+.movie {
+    width: 30%;
+}
+
+#title th {
+    /*border-radius: 5px;*/
+    background-color: #16181B;
+    color: #28A745;
+    border: 0;
+}
+
+.first {
+    border-radius: 10px 0 0 10px;
+    text-align: center;
+    width: 10%;
+}
+
+.last {
+    border-radius: 0 10px 10px 0;
+}
+
+.spacing {
+    margin-top: 5px;
+}
+
+#schedule tbody th, #schedule tbody td {
+    background-color: #343A40;
+    color: #9A9DA0;
+    border: 0;
+    /*padding-top: 5px;*/
+    /*margin-top: 5px;*/
+}
+
+/*td {*/
+/*    background-color: #343A40;*/
+/*}*/
 
 .section {
     height: 300px;
@@ -8,6 +59,11 @@
 
 .buy-button {
     height: 50px;
+    margin-bottom: 20px;
+}
+
+.day, .badge {
+    cursor: pointer;
 }
 
 .active {
@@ -22,21 +78,39 @@
     color: #28A745;
 }
 
+.pill {
+    border: 0;
+    display: block;
+    border-radius: 10px;
+    margin-left: auto;
+    width: 90%;
+    text-align: center;
+    background-color: #28A745;
+    color: whitesmoke;
+}
+
+.pill:hover {
+    text-decoration: none;
+    background-color: #257434;
+    color: #cdcdcd;
+}
+
 #buy {
     margin: auto;
     width: 10%;
     height: 80%;
-    border: 1px solid #28A745;
-    background-color: #595C5F;
-    color: #28A745;
+    background-color: #28A745;
+    color: whitesmoke;
+    border: 0;
     border-radius: 20px;
     font-size: 125%;
     z-index: 1;
+    outline: none;
 }
 
 #buy:hover {
-    background-color: #28A745;
-    color: #595C5F;
+    background-color: #257434;
+    color: #cdcdcd;
 }
 
 #triangle-right {
@@ -55,12 +129,14 @@
     border-top: 32px solid transparent;
     border-bottom: 32px solid transparent;
     border-left: 21px solid #28A745;
+    cursor: pointer;
 }
 
 #triangle-left:hover {
     border-top: 32px solid transparent;
     border-bottom: 32px solid transparent;
     border-right: 21px solid #28A745;
+    cursor: pointer;
 }
 
 #triangle-left {
@@ -147,4 +223,8 @@ section span {
     margin: 0 auto;
     left: 17em;
     top: 20em;
+}
+
+#content {
+    padding-top: 5%;
 }
