--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -23,7 +23,7 @@ body {
 #title th {
     /*border-radius: 5px;*/
     background-color: #16181B;
-    color: #28A745;
+    color: #28a745;
     border: 0;
 }
 
@@ -64,6 +64,8 @@ body {
 
 .day, .badge {
     cursor: pointer;
+    position: relative;
+    z-index: 1000;
 }
 
 .active {
@@ -72,6 +74,7 @@ body {
 
 .days span {
     text-decoration: none;
+    z-index: 50;
 }
 
 .days span:hover {
@@ -84,9 +87,14 @@ body {
     border-radius: 10px;
     margin-left: auto;
     width: 90%;
+    height: 1.4em;
     text-align: center;
     background-color: #28A745;
     color: whitesmoke;
+}
+
+.column {
+    margin-right: 20px;
 }
 
 .pill:hover {
@@ -122,7 +130,7 @@ body {
     border-bottom: 30px solid transparent;
     position: absolute;
     top: 30%;
-    left: 27%;
+    left: 34%;
 }
 
 #triangle-right:hover {
@@ -148,15 +156,15 @@ body {
     border-bottom: 30px solid transparent;
     position: absolute;
     top: 30%;
-    right: 27%;
+    right: 34%;
 }
 
 section {
-    width: 40em;
+    width: 100%;
     height: 25em;
     margin: 0 auto;
     position: relative;
-    right: 2.5%;
+    /*right: 2.5%;*/
 }
 
 section li {
@@ -227,4 +235,9 @@ section span {
 
 #content {
     padding-top: 5%;
+}
+
+.carousel {
+    position: relative;
+    left: -2.6em;
 }
