--- a/src/main/webapp/resources/css/authorization.css
+++ b/src/main/webapp/resources/css/authorization.css
@@ -7,6 +7,20 @@ body {
     background-size: 100%;
 }
 
+.invalid {
+    border: 1px solid red;
+    color: red;
+    padding: 15px 20px;
+    border-radius: 25px;
+    background: rgba(255, 255, 255, .1);
+    width: 100%;
+}
+
+.invalid-text {
+    color: red;
+    margin-left: 5%;
+}
+
 *, :after, :before {
     box-sizing: border-box
 }
