--- a/src/main/webapp/resources/css/change-movie.css
+++ b/src/main/webapp/resources/css/change-movie.css
@@ -5,10 +5,96 @@
     border-radius: 50%;
 }
 
+.bi {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+#body {
+    background-color: #595C5F;
+}
+
+#alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    animation: show-alert 0.4s both;
+    padding: 20px;
+    background-color: #9A9DA0;
+    border-radius: 15px;
+    z-index: 1000;
+}
+
+#alert p {
+    color: #16181b;
+}
+
+#button {
+    margin: auto;
+    width: 40px;
+}
+
+#alert a {
+    width: 100%;
+    display: block;
+    padding: 3px;
+    background-color: #28A745;
+    color: #16181b;
+    border-radius: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+#alert a:hover {
+    background-color: #257434;
+    color: #555d65;
+}
+
+@keyframes show-alert {
+    0% {
+        transform: scale(0.5);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes hide-alert {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+#uploadLabel {
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#uploadLabel label {
+    width: 60%;
+    padding: 3px;
+    border-radius: 10px;
+    background-color: #28A745;
+    cursor: pointer;
+}
+
+#uploadLabel label:hover {
+    background-color: #257434;
+    color: #9A9DA0;
+}
+
 #image-container {
     width: 100%;
     height: 100%;
     border: 0;
+    border-radius: 30px;
 }
 
 .picker {
@@ -24,8 +110,9 @@
 }
 
 #image {
-    width: 396px;
+    width: 362px;
     height: 504px;
+    margin-right: 30px;
 }
 
 .image-holder {
@@ -49,7 +136,7 @@
 }
 
 #actor-creating {
-    padding: 20px;
+    /*padding: 20px;*/
 }
 
 #form {
