--- a/src/main/webapp/resources/css/create-movie.css
+++ b/src/main/webapp/resources/css/create-movie.css
@@ -5,6 +5,39 @@
     border-radius: 50%;
 }
 
+#alert {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    animation: show-alert 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.bi {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+@keyframes show-alert {
+    0% {
+        transform: scale(0.5);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes hide-alert {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
 #image-container {
     width: 100%;
     height: 100%;
@@ -49,7 +82,7 @@
 }
 
 #actor-creating {
-    padding: 20px;
+    /*padding: 20px;*/
 }
 
 #form {
