--- a/src/main/webapp/resources/css/change-movie.css
+++ b/src/main/webapp/resources/css/change-movie.css
@@ -9,6 +9,11 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    cursor: pointer;
+}
+
+.bi:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 #body {
@@ -21,7 +26,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
-    animation: show-alert 0.4s both;
+    animation: show-alert 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     padding: 20px;
     background-color: #9A9DA0;
     border-radius: 15px;
@@ -62,15 +67,6 @@
     }
 }
 
-@keyframes hide-alert {
-    0% {
-        transform: scale(1);
-    }
-    100% {
-        transform: scale(0);
-    }
-}
-
 #uploadLabel {
     width: 100%;
     text-align: center;
@@ -87,7 +83,7 @@
     cursor: pointer;
 }
 
-#uploadLabel label:hover {
+#uploadLabel label:hover, #changeMovieBtn:hover {
     background-color: #257434;
     color: #9A9DA0;
 }
@@ -107,6 +103,7 @@
     padding: 0;
     width: 50%;
     border-radius: 10px;
+    display: none;
     border: 0;
     background-color: rgba(32, 124, 52, .7);
 }
@@ -114,15 +111,26 @@
 #changeMovieBtn {
     display: block;
     margin: auto;
-    width: 20%;
+    width: 30%;
     padding: 10px;
     border: 0;
     border-radius: 20px;
     background-color: #28A745;
+    margin-top: 20px;
+    font-size: 17px;
 }
 
 #search-actor {
     width: 50%;
+    background-color: rgba(32, 124, 52, .7);
+    border-radius: 5px;
+    border: 0;
+    color: #9A9DA0;
+    margin-bottom: 5px;
+}
+
+#search-actor:focus {
+    box-shadow: 0 0 0 .2rem rgba(60, 177, 48, 0.25);
 }
 
 .actors {
@@ -157,7 +165,9 @@ a, span, div {
 }
 
 .text {
+    font-size: 20px;
     margin-top: 10px;
+    margin-bottom: 5px;
     display: block;
 }
 
@@ -184,6 +194,12 @@ a, span, div {
     list-style: none;
     border: 0;
     border-radius: 35px;
+    cursor: pointer;
+}
+
+#create-actor:hover {
+    background-color: rgb(25, 94, 40);
+    color: #9A9DA0;
 }
 
 .actor {
@@ -192,6 +208,12 @@ a, span, div {
     background-color: rgba(32, 124, 52, .7);
     border: 0;
     border-radius: 35px;
+    cursor: pointer;
+}
+
+.actor:hover {
+    background-color: rgba(29, 104, 45, 0.75);
+    color: #9A9DA0;
 }
 
 #image {
@@ -221,7 +243,12 @@ a, span, div {
 }
 
 #actor-creating {
-    /*padding: 20px;*/
+    margin-top: 10px;
+    padding: 10px;
+    background-color: rgba(32, 124, 52, .7);
+    border: 0;
+    border-radius: 40px;
+    display: none;
 }
 
 #form {
