--- a/src/main/webapp/resources/css/create-movie.css
+++ b/src/main/webapp/resources/css/create-movie.css
@@ -5,19 +5,57 @@
     border-radius: 50%;
 }
 
-#alert {
+.bi {
     position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.bi:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+#alert {
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
     animation: show-alert 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    padding: 20px;
+    background-color: #9A9DA0;
+    border-radius: 15px;
+    z-index: 1000;
 }
 
-.bi {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+#alert p {
+    color: #16181b;
+}
+
+#button {
+    margin: auto;
+    width: 40px;
+}
+
+#alert a {
+    width: 100%;
+    display: block;
+    padding: 3px;
+    background-color: #28A745;
+    color: #16181b;
+    border-radius: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+#alert a:hover {
+    background-color: #257434;
+    color: #555d65;
+}
+
+#body {
+    background-color: #595C5F;
 }
 
 @keyframes show-alert {
@@ -29,36 +67,159 @@
     }
 }
 
-@keyframes hide-alert {
-    0% {
-        transform: scale(1);
-    }
-    100% {
-        transform: scale(0);
-    }
+#uploadLabel {
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    user-input: none;
+    user-select: none;
+}
+
+#uploadLabel label {
+    width: 60%;
+    padding: 3px;
+    border-radius: 10px;
+    background-color: #28A745;
+    cursor: pointer;
+}
+
+#uploadLabel label:hover, #createMovieBtn:hover {
+    background-color: #257434;
+    color: #9A9DA0;
 }
 
 #image-container {
     width: 100%;
     height: 100%;
     border: 0;
+    border-radius: 30px;
 }
 
 .picker {
     width: 170px;
 }
 
+#current-actors {
+    padding: 0;
+    width: 50%;
+    border-radius: 10px;
+    display: none;
+    border: 0;
+    background-color: rgba(32, 124, 52, .7);
+}
+
+#createMovieBtn {
+    display: block;
+    margin: auto;
+    width: 30%;
+    padding: 10px;
+    border: 0;
+    border-radius: 20px;
+    background-color: #28A745;
+    margin-top: 20px;
+    font-size: 17px;
+}
+
+#search-actor {
+    width: 50%;
+    background-color: rgba(32, 124, 52, .7);
+    border-radius: 5px;
+    border: 0;
+    color: #9A9DA0;
+    margin-bottom: 5px;
+}
+
+#search-actor:focus {
+    box-shadow: 0 0 0 .2rem rgba(60, 177, 48, 0.25);
+}
+
+.actors {
+    padding: 10px;
+}
+
+.current-actor {
+    padding: 5px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, .3);
+    position: relative;
+    list-style: none;
+    margin: 5px 0 5px 0;
+}
+
 #all-actors {
     display: none;
+    width: 50%;
+}
+
+a, span, div {
+    user-input: none;
+    user-select: none;
+}
+
+#name, #description {
+    padding: 10px;
+    border: 0;
+    border-radius: 30px;
+    background-color: rgba(32, 124, 52, .7);
+    color: #9A9DA0;
+}
+
+.text {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    display: block;
+}
+
+#picker {
+    padding: 5px;
+    border: 0;
+    border-radius: 20px;
+    background-color: rgba(32, 124, 52, .7);
+    color: #9A9DA0;
+}
+
+#picker input {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    background-color: rgba(0, 0, 0, 0);
+    color: #9A9DA0;
 }
 
 #create-actor {
     margin-top: 0;
+    padding: 10px;
+    background-color: rgb(32, 124, 52);
+    list-style: none;
+    border: 0;
+    border-radius: 35px;
+    cursor: pointer;
+}
+
+#create-actor:hover {
+    background-color: rgb(25, 94, 40);
+    color: #9A9DA0;
+}
+
+.actor {
+    padding: 10px;
+    list-style: none;
+    background-color: rgba(32, 124, 52, .7);
+    border: 0;
+    border-radius: 35px;
+    cursor: pointer;
+}
+
+.actor:hover {
+    background-color: rgba(29, 104, 45, 0.75);
+    color: #9A9DA0;
 }
 
 #image {
-    width: 396px;
+    width: 362px;
     height: 504px;
+    margin-right: 30px;
 }
 
 .image-holder {
@@ -82,7 +243,12 @@
 }
 
 #actor-creating {
-    /*padding: 20px;*/
+    margin-top: 10px;
+    padding: 10px;
+    background-color: rgba(32, 124, 52, .7);
+    border: 0;
+    border-radius: 40px;
+    display: none;
 }
 
 #form {
