--- a/src/main/webapp/resources/css/movies.css
+++ b/src/main/webapp/resources/css/movies.css
@@ -20,6 +20,11 @@ span {
     right: 15px;
     z-index: 1000;
     cursor: pointer;
+    border-radius: 10px;
+}
+
+.bi:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 #list {
