--- a/src/main/webapp/resources/css/schedule.css
+++ b/src/main/webapp/resources/css/schedule.css
@@ -1,8 +1,19 @@
 #calendar {
     position: absolute;
-    top: 226px;
-    left: 42.5%;
+    float: left;
     display: none;
+}
+
+#body {
+    background-color: #595C5F;
+}
+
+#header {
+    height: 150px;
+}
+
+#container {
+    margin: 0 50px 0 50px;
 }
 
 #movie-input {
@@ -47,16 +58,65 @@
     width: 40%;
 }
 
+#create-seance .spacing {
+    background-color: #343A40;
+    padding: 5px;
+}
+
+#creating-table-body input {
+    padding: 5px;
+    border: 0;
+    border-radius: 20px;
+    background-color: rgba(32, 124, 52, .7);
+    color: #9A9DA0;
+}
+
+#create-seance .first {
+    width: 330px;
+}
+
+#movie-input {
+    width: 90%;
+}
+
+#create-seance .last {
+    width: 110px;
+}
+
+#create, #confirm {
+    width: 100px;
+    padding: 5px;
+    border: 0;
+    border-radius: 20px;
+    background-color: #28A745;
+    outline: 0;
+}
+
+#createBtn {
+    width: 110px;
+    margin: auto;
+    margin-top: 20px;
+}
+
+#create:hover, #confirm:hover {
+    background-color: #257434;
+    color: #9A9DA0;
+}
+
 .title th {
     background-color: #16181B;
     color: #28a745;
-    border: 0;
+    border: 0 !important;
 }
 
 .first {
     border-radius: 10px 0 0 10px;
     text-align: center;
     width: 10%;
+}
+
+#price-input {
+    width: 60px;
 }
 
 .last {
@@ -71,7 +131,7 @@
 #schedule tbody th, #schedule tbody td {
     background-color: #343A40;
     color: #9A9DA0;
-    border: 0;
+    border: 0 !important;
 }
 
 .column {
@@ -84,4 +144,21 @@
 
 #create-container {
     display: none;
+}
+
+#date {
+    margin-left: 5%;
+    margin-bottom: 15px;
+}
+
+#date input {
+    padding: 10px;
+    border: 0;
+    border-radius: 30px;
+    background-color: rgba(32, 124, 52, .7);
+    color: #9A9DA0;
+}
+
+.text {
+    font-size: 20px;
 }
