--- a/src/main/webapp/resources/css/ticket-order.css
+++ b/src/main/webapp/resources/css/ticket-order.css
@@ -3,18 +3,23 @@
 }
 
 .register-photo {
-    background: #f1f7fc;
     padding: 80px 0;
+    background-color: #595C5F;
 }
 
 .register-photo .image-holder {
-    width: 396px;
+    width: 362px;
     height: 504px;
     position: relative;
     float: left;
     background-size: cover;
+    margin-right: 20px;
 }
 
+#header {
+    height: 50px;
+    background-color: #595C5F;
+}
 
 .image-holder img {
     width: 100%;
@@ -26,16 +31,30 @@
     max-width: 1200px;
     width: 90%;
     margin: 0 auto;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
-    background-color: white;
+    box-shadow: 0px 0px 24px 4px rgba(0, 0, 0, 0.75);
+    background-color: #7f8992;
+}
+
+.text {
+    font-size: 18px;
+}
+
+#form input {
+    border: 0;
+    width: 200px;
+    border-radius: 20px;
+    background-color: #595C5F;
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
+    font-size: 18px;
+    padding: 5px;
+    color: #9A9DA0;
 }
 
 .register-photo form {
     display: table-cell;
-    width: 400px;
-    background-color: #ffffff;
+    width: 100%;
+    background-color: #7f8992;
     padding: 40px 60px;
-    color: #505e6c;
 }
 
 @media (max-width: 991px) {
@@ -69,6 +88,59 @@
 
 #button {
     margin-top: 35px;
+}
+
+#alertBtn {
+    margin: auto;
+    width: 40px;
+}
+
+#alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    animation: show-alert 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    padding: 20px;
+    background-color: #9A9DA0;
+    border-radius: 15px;
+    z-index: 1000;
+}
+
+#alert p {
+    color: #16181b;
+}
+
+#alert a {
+    width: 100%;
+    display: block;
+    padding: 3px;
+    background-color: #28A745;
+    color: #16181b;
+    border-radius: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+#alert a:hover {
+    background-color: #257434;
+    color: #555d65;
+}
+
+#buy {
+    width: 200px;
+    margin: auto;
+    background-color: #28A745;
+    border-radius: 30px;
+    border: 0;
+    outline: 0;
+    box-shadow: none;
+}
+
+#buy:hover {
+    background-color: #257434;
+    color: #9A9DA0;
 }
 
 .register-photo form .btn-primary {
@@ -133,21 +205,22 @@
 }
 
 .available {
-    background-color: #96c131;
+    background-color: #32db58;
 }
 
 .hovering {
-    background-color: #ae59b3;
+    background-color: #28a745;
 }
 
 .selected {
-    background-color: red;
+    background-color: #257434;
+    color: #c6c8cb;
 }
 
 #calendar {
     position: absolute;
-    top: 226px;
-    left: 42.5%;
+    top: 292px;
+    left: 41.5%;
     display: none;
 }
 
@@ -166,14 +239,22 @@ input {
 }
 
 .reserved {
-    background-color: #28A745;
+    background-color: #9A9DA0;
 }
 
 #time-list {
     position: absolute;
-    top: 226px;
-    left: 54%;
+    top: 292px;
+    left: 53.2%;
     display: none;
+    /*border-radius: 30px;*/
+}
+
+#time-list p {
+    padding: 5px 15px 5px 15px;
+    margin: 0;
+    font-size: 18px;
+    border-radius: 30px;
 }
 
 #places {
@@ -182,4 +263,9 @@ input {
 
 #info {
     display: inline-flex;
+}
+
+#form {
+    width: 100%;
+    margin-top: 15px;
 }
