--- a/src/main/webapp/resources/css/schedule.css
+++ b/src/main/webapp/resources/css/schedule.css
@@ -16,6 +16,10 @@
     margin: 0 50px 0 50px;
 }
 
+.empty {
+    height: 500px;
+}
+
 #movie-input {
     width: 180px;
 }
@@ -63,9 +67,12 @@
     padding: 5px;
 }
 
-#creating-table-body input {
-    padding: 5px;
+input {
     border: 0;
+}
+
+#creating-table-body input, #schedule input {
+    padding: 5px;
     border-radius: 20px;
     background-color: rgba(32, 124, 52, .7);
     color: #9A9DA0;
@@ -83,7 +90,7 @@
     width: 110px;
 }
 
-#create, #confirm {
+#create, #confirm, #change {
     width: 100px;
     padding: 5px;
     border: 0;
@@ -98,7 +105,7 @@
     margin-top: 20px;
 }
 
-#create:hover, #confirm:hover {
+#create:hover, #confirm:hover, #change:hover {
     background-color: #257434;
     color: #9A9DA0;
 }
