--- a/src/main/webapp/resources/css/ticket-order.css
+++ b/src/main/webapp/resources/css/ticket-order.css
@@ -13,7 +13,7 @@
     position: relative;
     float: left;
     background-size: cover;
-    margin-right: 20px;
+    margin: 20px;
 }
 
 #header {
